# toy-torrent

./: .gitignore  CMakeLists.txt  xmake.lua
include/: bencode.h  bencode.hpp  tcp.hpp
src/: bencode.cc  bencode.cpp  main.cc  main.cpp  tcp.cpp
